--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "@splidejs/react-splide": "^0.7.12",
     "clsx": "^2.1.1",
     "next": "15.0.1",
-    "react": "19.0.0-rc-69d4b800-20241021",
-    "react-dom": "19.0.0-rc-69d4b800-20241021"
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
   },
   "devDependencies": {
     "eslint": "^9.13.0",
